Major refactoring, to support standalone usage with reflection-based core and Swing UI.